--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "element-plus": "^2.7.7",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
